# Win-WebServer

./: CMakeLists.txt  README.md  client.cpp  main.cpp  server.cpp
include/: Server.h  Socket.h
src/: Server.cpp  Socket.cpp
